# AI-Internship

./: README.md
ai-builders-bootcamp/week-3/: Demo 1 - AI Agent with Calculator and Web Search Chat.json  Maven N8n chat agent.json
ai-engineering-bootcamp/adk-multi-agent-systems/: .env.example  .gitignore  README.md  demo1_routing.py  demo2_mcp.py  demo3_full_system.py  pyproject.toml  shipping_agent.py  streamlit_app.py  week3_notebook.ipynb
ai-engineering-bootcamp/eval-monitoring-shipping/: .gitignore  README.md  app.py  main.py  requirements.txt  simple_openai_langfuse.py
ai-engineering-bootcamp/rag-vector-databases/: .env.example  .gitignore  README.md  rag_vector_databases_live_session.ipynb
multi-agent-systems/: README.md
multi-agent-systems/week-1/: .env.example  README.md  requirements.txt  week1_notebook.ipynb
multi-agent-systems/week-2/: .gitignore  requirements.txt  streamlit_app.py  week2_notebook.ipynb
multi-agent-systems/week-3/: .env.example  README.md  requirements.txt  week3_notebook.ipynb
